--- a/app/src/main/res/layout/activity_new_order_details.xml
+++ b/app/src/main/res/layout/activity_new_order_details.xml
@@ -8,14 +8,15 @@
 
     <ScrollView
         android:id="@+id/newDeliveryDetailsScrollView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1"
+        android:fillViewport="true"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0">
+        tools:layout_editor_absoluteY="123dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/newDeliveryDetailsScrollConstraintLayout"
@@ -33,38 +34,21 @@
                 app:layout_constraintTop_toBottomOf="@+id/OtherVehicleET"
                 app:layout_constraintVertical_bias="0.0" />
 
+
             <EditText
                 android:id="@+id/newDeliveryDetailOtherGoodEditText"
-                android:layout_width="255dp"
-                android:layout_height="48dp"
+                android:layout_width="158dp"
+                android:layout_height="47dp"
+                android:layout_marginBottom="540dp"
                 android:ems="10"
                 android:hint="@string/other"
                 android:importantForAutofill="no"
                 android:inputType="textPersonName"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.214"
+                app:layout_constraintHorizontal_bias="0.94"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/GoodTypeRG"
-                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="DuplicateSpeakableTextCheck" />
-
-
-            <EditText
-                android:id="@+id/Weight"
-                android:layout_width="132dp"
-                android:layout_height="48dp"
-                android:ems="10"
-                android:hint="@string/weight"
-                android:importantForAutofill="no"
-                android:inputType="numberSigned"
-                android:textColorHint="#757575"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailWeightDimensionsTextView"
-                app:layout_constraintVertical_bias="0.036" />
 
             <EditText
                 android:id="@+id/Width"
@@ -77,26 +61,39 @@
                 android:textColorHint="#757575"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.267"
+                app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintStart_toEndOf="@+id/Weight"
                 app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailWeightDimensionsTextView"
                 app:layout_constraintVertical_bias="0.036" />
 
+            <TextView
+                android:id="@+id/newDeliveryDetailWeightDimensionsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/weight_and_dimensions"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.025"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailOtherGoodEditText"
+                app:layout_constraintVertical_bias="0.023" />
+
             <EditText
-                android:id="@+id/Height"
+                android:id="@+id/Weight"
                 android:layout_width="132dp"
                 android:layout_height="48dp"
                 android:ems="10"
-                android:hint="@string/height"
+                android:hint="@string/weight"
                 android:importantForAutofill="no"
                 android:inputType="numberSigned"
                 android:textColorHint="#757575"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.266"
-                app:layout_constraintStart_toEndOf="@+id/Length"
-                app:layout_constraintTop_toBottomOf="@+id/Width"
-                app:layout_constraintVertical_bias="0.022" />
+                app:layout_constraintHorizontal_bias="0.025"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailWeightDimensionsTextView"
+                app:layout_constraintVertical_bias="0.036" />
 
             <EditText
                 android:id="@+id/Length"
@@ -109,15 +106,32 @@
                 android:textColorHint="#757575"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.15"
+                app:layout_constraintHorizontal_bias="0.025"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Weight"
-                app:layout_constraintVertical_bias="0.025" />
+                app:layout_constraintVertical_bias="0.026" />
+
+            <EditText
+                android:id="@+id/Height"
+                android:layout_width="132dp"
+                android:layout_height="48dp"
+                android:ems="10"
+                android:hint="@string/height"
+                android:importantForAutofill="no"
+                android:inputType="numberSigned"
+                android:textColorHint="#757575"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.2"
+                app:layout_constraintStart_toEndOf="@+id/Length"
+                app:layout_constraintTop_toBottomOf="@+id/Width"
+                app:layout_constraintVertical_bias="0.023" />
 
             <EditText
                 android:id="@+id/OtherVehicleET"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="143dp"
+                android:layout_height="55dp"
+                android:layout_marginBottom="144dp"
                 android:ems="10"
                 android:hint="@string/other"
                 android:importantForAutofill="no"
@@ -125,50 +139,48 @@
                 android:minHeight="48dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.198"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/DetailVehicleTypeRG"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintHorizontal_bias="0.94"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <RadioGroup
                 android:id="@+id/GoodTypeRG"
-                android:layout_width="292dp"
-                android:layout_height="237dp"
+                android:layout_width="188dp"
+                android:layout_height="133dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.267"
+                app:layout_constraintHorizontal_bias="0.04"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailGoodTypeTextView"
-                app:layout_constraintVertical_bias="0.031">
+                app:layout_constraintVertical_bias="0.0">
 
                 <RadioButton
                     android:id="@+id/FurnitureRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="28dp"
                     android:text="@string/furniture" />
 
                 <RadioButton
                     android:id="@+id/DryGoodsRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="27dp"
                     android:text="@string/dry_goods" />
 
                 <RadioButton
                     android:id="@+id/FoodRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="28dp"
                     android:text="@string/food" />
 
                 <RadioButton
                     android:id="@+id/BuildingMaterialRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="22dp"
                     android:text="@string/building_material" />
 
                 <RadioButton
                     android:id="@+id/OtherGoodRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="22dp"
                     android:minHeight="48dp"
                     android:text="@string/other"
                     tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
@@ -177,43 +189,43 @@
 
             <RadioGroup
                 android:id="@+id/DetailVehicleTypeRG"
-                android:layout_width="279dp"
-                android:layout_height="246dp"
+                android:layout_width="230dp"
+                android:layout_height="175dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.269"
+                app:layout_constraintHorizontal_bias="0.08"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailVehicleTypeTextView"
-                app:layout_constraintVertical_bias="0.205">
+                app:layout_constraintVertical_bias="0.100000024">
 
                 <RadioButton
                     android:id="@+id/TruckRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="36dp"
                     android:text="@string/truck" />
 
                 <RadioButton
                     android:id="@+id/VanRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="31dp"
                     android:text="@string/van" />
 
                 <RadioButton
                     android:id="@+id/RefrigeratedTruckRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="34dp"
                     android:text="@string/refrigerated_truck" />
 
                 <RadioButton
                     android:id="@+id/MiniTruckRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="48dp"
+                    android:layout_height="30dp"
                     android:text="@string/mini_truck" />
 
                 <RadioButton
                     android:id="@+id/OtherVehicleRBTN"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="29dp"
                     android:text="@string/other" />
 
             </RadioGroup>
@@ -226,23 +238,10 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.121"
+                app:layout_constraintHorizontal_bias="0.05"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.043" />
-
-            <TextView
-                android:id="@+id/newDeliveryDetailWeightDimensionsTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/weight_and_dimensions"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.201"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/newDeliveryDetailOtherGoodEditText"
-                app:layout_constraintVertical_bias="0.09" />
+                app:layout_constraintVertical_bias="0.019" />
 
             <TextView
                 android:id="@+id/newDeliveryDetailVehicleTypeTextView"
@@ -252,10 +251,10 @@
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.118"
+                app:layout_constraintHorizontal_bias="0.023"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/Length"
-                app:layout_constraintVertical_bias="0.134" />
+                app:layout_constraintVertical_bias="0.042" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
