--- a/app/src/main/res/layout/order_recycler.xml
+++ b/app/src/main/res/layout/order_recycler.xml
@@ -6,11 +6,11 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="1dp"
+        android:layout_width="387dp"
+        android:layout_height="131dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="1dp"
+        android:elevation="8dp"
+        android:divider="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
