--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -239,4 +239,16 @@
         app:layout_constraintTop_toBottomOf="@+id/lengthTV"
         app:layout_constraintVertical_bias="1.0" />
 
+    <Button
+        android:id="@+id/checkDriver"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Check Driver"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.466"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/HeightTV"
+        app:layout_constraintVertical_bias="0.865" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
