--- a/app/src/main/res/layout/activity_estimate_map.xml
+++ b/app/src/main/res/layout/activity_estimate_map.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EstimateActivity">
+    tools:context=".EstimateMapActivity">
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapView"
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.272" />
+
 
     <TextView
         android:id="@+id/textView9"
